--- a/翻译历史记录.md
+++ b/翻译历史记录.md
@@ -33,3 +33,23 @@ progress target value : 进度目标值,
 ```
 单例展示一个简单的静态接口构建请求{ @link位图请求Builder }和维护一个{ @link引擎},{ @link位图池},{ @link com.bumptech.glide.load.engine.cache。磁盘缓存},;
 ```
+- Button Click
+```
+按钮点击;
+网络释义：
+Button Click : 按钮单击,
+Button Or Click The : 按钮或按键盘,
+Dialog Button Click : 按下对话按钮,
+```
+- extras even if they are not explicitly given to it.
+```
+临时演员,即使他们没有明确给出。;
+```
+- Flag indicating that if the described Pending Intent already exists,
+```
+国旗表明如果等待意图描述已经存在,;
+```
+- already exist, then simply return null instead of creating it.
+```
+已经存在,然后简单地返回null而不是创建它。;
+```
